[project]
name = "django-umd-lib-style"
version = "1.0.0-dev"
dependencies = [
    "django>=4.2",
]
authors = [
    { name="Peter Eichman", email="peichman@umd.edu" },
    { name="Tim Kanke", email="tkanke@umd.edu" },
]
maintainers = [
    { name='University of Maryland Libraries', email='lib-ssdr@umd.edu' },
]
