[project]
name = "django-umd-lib-style"
description = "Django app that provides theming for UMD Libraries applications"
version = "1.2.0"
dependencies = [
    "django>=4.2",
]
authors = [
    { name='University of Maryland Libraries', email='lib-ssdr@umd.edu' },
    { name="Erik Jones", email="ejones99@umd.edu" },
    { name="Peter Eichman", email="peichman@umd.edu" },
    { name="Tim Kanke", email="tkanke@umd.edu" },
]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: Django",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-django",
]
